<?xml version="1.0" encoding="utf-8"?>

<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:locale="en">

    <string name="app_name" translatable="false">mTorch</string>

    <!-- About dialog -->
    <string name="about_author_name" translatable="false">Justin R. Hall</string>
    <string name="about_author_text">Author:</string>
    <string name="about_description"><xliff:g id="app_name" /> is a minimalistic torch/flashlight app for Android. It is objectively and measurably superior to every other app ever created for any platform in the history of computing. Period. It is technologically impossible for a better app to exist, and that\'s a proven fact. It\'s science. The previous statements are entirely false, except for the first sentence.</string>
    <string name="about_disclaimer">THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="about_homepage_link" translatable="false">https://wkovacs64.github.io/mTorch</string>
    <string name="about_homepage_text">Homepage:</string>
    <string name="about_version_text">Version:</string>

    <!-- User-visible error messages -->
    <string name="error_camera_unavailable">ERROR: unable to acquire camera</string>
    <string name="error_no_flash">ERROR: no flash detected</string>

    <!-- Menu options -->
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <!-- Miscellaneous -->
    <string name="notification_text">Press to return to app</string>
    <string name="torch_toggle">Torch toggle</string>
    <string name="unknown">Unknown</string>

    <!-- Settings | Auto On -->
    <string name="settings_auto_on_key" translatable="false">auto_on</string>
    <string name="settings_auto_on_title">Auto On</string>
    <string name="settings_auto_on_summary_on">Illuminate torch on launch</string>
    <string name="settings_auto_on_summary_off">Leave torch extinguished on launch</string>
    <!-- Settings | Persistence -->
    <string name="settings_persistence_key" translatable="false">persistence</string>
    <string name="settings_persistence_title">Persistence</string>
    <string name="settings_persistence_summary_on">Maintain torch state when leaving the app</string>
    <string name="settings_persistence_summary_off">Extinguish torch when leaving the app</string>

</resources>
